<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="280dp"
        android:fillViewport="true"
        android:background="@color/off_black">
    <TextView
        android:id="@+id/tvInput_Output"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/off_black"
        android:text="@string/_output"
        android:textStyle="italic"
        android:padding="10dp"
        android:textColor="@color/white"
        android:textSize="50sp"
        android:gravity="end|bottom"
        />
    </ScrollView>


    <View
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:background="@android:color/white" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/off_black"
        android:layout_weight="1"
        >

        <Button
            android:id="@+id/btnCLR"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:textSize="20sp"
            android:textColor="@color/white"
            android:onClick="onClear"
            android:layout_margin="4dp"
            android:text="@string/_clear" />

        <Button
            android:id="@+id/btnOneBack"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:textSize="30sp"
            android:textColor="@color/white"
            android:onClick="oneBackClear"
            android:layout_margin="4dp"
            android:text="@string/_oneClear" />

        <Button
            android:id="@+id/btnPercentage"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:textSize="30sp"
            android:textColor="@color/white"
            android:onClick="onOperators"
            android:layout_margin="4dp"
            android:text="@string/_percentage" />

        <Button
            android:id="@+id/btnDivide"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:textSize="30sp"
            android:textColor="@color/white"
            android:onClick="onOperators"
            android:layout_margin="4dp"
            android:text="@string/_divide" />

    </LinearLayout>


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/off_black"
        android:layout_weight="1"
        >

        <Button
            android:id="@+id/btnSeven"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:textSize="30sp"
            android:backgroundTint="@color/off_black"
            android:textColor="@color/white"
            android:onClick="onDigit"
            android:layout_margin="4dp"
            android:text="@string/_7" />

        <Button
            android:id="@+id/btnEight"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:textSize="30sp"
            android:textColor="@color/white"
            android:backgroundTint="@color/off_black"
            android:onClick="onDigit"
            android:layout_margin="4dp"
            android:text="@string/_8" />

        <Button
            android:id="@+id/btnNine"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:textSize="30sp"
            android:textColor="@color/white"
            android:backgroundTint="@color/off_black"
            android:onClick="onDigit"
            android:layout_margin="4dp"
            android:text="@string/_9" />

        <Button
            android:id="@+id/btnMultiply"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:textSize="30sp"
            android:textColor="@color/white"
            android:onClick="onOperators"
            android:layout_margin="4dp"
            android:text="@string/_multiply" />

    </LinearLayout>


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/off_black"
        android:layout_weight="1"
        >

        <Button
            android:id="@+id/btnFour"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:textSize="30sp"
            android:textColor="@color/white"
            android:backgroundTint="@color/off_black"
            android:onClick="onDigit"
            android:layout_margin="4dp"
            android:text="@string/_4" />

        <Button
            android:id="@+id/btnFive"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:textSize="30sp"
            android:textColor="@color/white"
            android:backgroundTint="@color/off_black"
            android:onClick="onDigit"
            android:layout_margin="4dp"
            android:text="@string/_5" />

        <Button
            android:id="@+id/btnSix"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:textSize="30sp"
            android:textColor="@color/white"
            android:backgroundTint="@color/off_black"
            android:onClick="onDigit"
            android:layout_margin="4dp"
            android:text="@string/_6" />

        <Button
            android:id="@+id/btnSubtract"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:textSize="30sp"
            android:textColor="@color/white"
            android:onClick="onOperators"
            android:layout_margin="4dp"
            android:text="@string/_sub" />

    </LinearLayout>


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/off_black"
        android:layout_weight="1"
        >

        <Button
            android:id="@+id/btnOne"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:textSize="30sp"
            android:textColor="@color/white"
            android:backgroundTint="@color/off_black"
            android:onClick="onDigit"
            android:layout_margin="4dp"
            android:text="@string/_1" />

        <Button
            android:id="@+id/btnTwo"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:textSize="30sp"
            android:textColor="@color/white"
            android:backgroundTint="@color/off_black"
            android:onClick="onDigit"
            android:layout_margin="4dp"
            android:text="@string/_2" />

        <Button
            android:id="@+id/btnThree"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:textSize="30sp"
            android:textColor="@color/white"
            android:backgroundTint="@color/off_black"
            android:onClick="onDigit"
            android:layout_margin="4dp"
            android:text="@string/_3" />

        <Button
            android:id="@+id/btnAdd"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:textSize="30sp"
            android:textColor="@color/white"
            android:onClick="onOperators"
            android:layout_margin="4dp"
            android:text="@string/_add" />

    </LinearLayout>


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/off_black"
        android:layout_weight="1"
        >


        <Button
            android:id="@+id/btnNegate"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:textSize="25sp"
            android:textColor="@color/white"

            android:onClick="onNegate"
            android:layout_margin="4dp"
            android:text="@string/_negate" />
        <Button
            android:id="@+id/btnZero"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:textSize="40sp"
            android:textColor="@color/white"
            android:backgroundTint="@color/off_black"
            android:onClick="onDigit"
            android:layout_margin="4dp"
            android:text="@string/_0" />


        <Button
            android:id="@+id/btnDot"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:textSize="40sp"
            android:textColor="@color/white"
            android:onClick="onDecimalPoint"
            android:layout_margin="4dp"
            android:text="@string/_dot" />

        <Button
            android:id="@+id/btnEqualToo"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:textSize="40sp"
            android:textColor="@color/white"
            android:onClick="onEqual"
            android:layout_margin="4dp"
            android:text="@string/_resultEqualToo" />

    </LinearLayout>


</LinearLayout>